# launch_detection

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: inference_benchmark.py
data/manifests/: aoi_config.json  known_sites.json
docs/: dataset-card.md  model-card.md
infra/: docker-compose.yml
infra/postgres-init/: 001_schema.sql
libs/: config.py
libs/features/: indices.py
libs/geo/: masks.py  postprocess.py  tiling.py
libs/stac/: client.py
model_repository/unet_seg/: config.pbtxt
services/api/: database.py  main.py  models.py  schemas.py
services/api/routes/: detections.py  evidence.py  health.py  known_sites.py  tiles.py
services/pipeline/: flows.py  tasks.py
services/serving/: __init__.py  export_model.py  memory_optimized.py  triton_client.py
services/training/: dataset.py  inference.py  lightning_module.py  losses.py  metrics.py  model.py  train.py
services/web/: index.html  package-lock.json  package.json  vite.config.js
services/web/src/: api.js  main.js  style.css
