[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "launchsite-osint"
version = "0.1.0"
description = "Satellite-based launch site detection pipeline"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["libs*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
